--- a/Tsohantyo/src/main/webapp/WEB-INF/web.xml
+++ b/Tsohantyo/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-         http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-    <display-name>spring-jea</display-name>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+         version="2.4">
+    <!-- web-app versiolla 2.4 RESOURCE_LOCAL transaktiot toimivat
+glassfish-palvelimella, versiolla 2.5 ei. -->
+
+    <display-name>Tsohantyo</display-name>
     
-        <!-- Filtteri: Kaikki pyynnöt utf-8:ksi -->
+           
+    <!-- Filtteri: security, kaikki pyynnöt filtterin läpi -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
+
+    <!-- Filtteri: Kaikki pyynnöt utf-8:ksi -->
     <filter>
         <filter-name>encoding-filter</filter-name>
         <filter-class>
@@ -24,28 +40,39 @@
         <filter-name>encoding-filter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
     
-    <!-- front controller -->
+    <!-- konfiguraatiotiedosto tietoturvalle -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/spring-security.xml
+            /WEB-INF/spring-context.xml
+        </param-value>
+    </context-param>
+    
+        
+    <!-- konteksti tietoturvalle -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+ 
+    <!-- Front controller, ei anneta init-param -tiedostoja jolloin
+konfiguraatiotiedosto oletuksena osoitteessa spring-front-controller-servlet.xml -->
     <servlet>
         <servlet-name>spring-front-controller</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/spring-context.xml</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>        
- 
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>spring-front-controller</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
     <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
+        <session-timeout>30</session-timeout>
     </session-config>
+
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
